@@ -2,7 +2,7 @@
  *
  * Nagios Common Header File
  * Written By: Ethan Galstad (nagios@nagios.org)
- * Last Modified: 10-30-2004
+ * Last Modified: 02-02-2005
  *
  * License:
  *
@@ -350,7 +350,7 @@
 
 #define MAX_FILENAME_LENGTH			256	/* max length of path/filename that Nagios will process */
 #define MAX_INPUT_BUFFER			1024	/* size in bytes of max. input buffer (for reading files) */
-#define MAX_COMMAND_BUFFER                      4096    /* max length of raw or processed command line */
+#define MAX_COMMAND_BUFFER                      32768    /* max length of raw or processed command line */
 
 #define MAX_DATETIME_LENGTH			48
 
